# python/Cargo.toml

[package]
name = "rust_agent_engine_python"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[lib]
name = "rust_agent_engine"
crate-type = ["cdylib","rlib"]

[dependencies]
rust_agent_engine_core = { path = "../engine" }
pyo3 = { version = "0.21.0", features = ["extension-module"] }
tokio = { version = "1.37", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3-stub-gen = "0.6"