[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rust-agent-engine"
version = "0.1.4"
description = "High-performance autonomous agent engine powered by Rust and Python."
authors = [
    {name = "Emre Rodoplu", email = "emrerodoplu3@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = []

[tool.maturin]
module-name = "rust_agent_engine"